# well-genie

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pom.xml  readme.md
.github/: pull_request_template.md
.github/workflows/: backend-test.yml  frontend-test.yml  test.yml
backend/: .dockerignore  README.md  pyproject.toml  seed.py
backend/.github/workflows/: test.yml
backend/app/: database.py  main.py  models.py
backend/app/llm/: chat_service.py  prompt.py
backend/app/routers/: auth.py  chat.py  diet.py  exercise.py  sleep.py  upload.py
backend/app/services/: delete.py  ingest.py  sessions.py  validators.py
backend/app/test/: conftest.py  test_main.py
backend/app/test/routers/: test_diet.py
backend/app/test/services/: csv_test_invalid.py  csv_test_valid.py  login_test_failed.py  login_test_valid.py  test_auth_service.py  test_ingest.py  test_sessions.py  test_validators.py
backend/app/tests/: conftest.py
backend/app/tests/routers/: test_auth.py  test_delete.py  test_diet.py  test_exercise.py  test_sleep.py  test_upload.py
backend/app/tests/services/: test_auth_service.py  test_ingest.py  test_sessions.py
backend/samples/: diet copy.csv  error_diet.csv  error_exercise.csv  error_sleep.csv  exercise.csv  sleep.csv
frontend/: .eslintrc.cjs  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  setupTests.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/e2e/: Auth.setup.ts  (+7 more)
(+125 files in other folders)
