[project]
name = "WellGenie-backend"
version = "0.1.0"
description = "WellGenie API server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.118.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
